--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
                     <span class="h3">
                         Your move
                     </span>
-                    <span class="result-count">You one <span id="result-win-count"> 0 </span> times </span>
+                    <span class="result-count">You won <span id="result-win-count"> 0 </span> times </span>
                 </div>
                 <div class="row-container">
                     <div class="circle-container">
@@ -60,7 +60,7 @@
                     <span class="h3">
                         Computer move
                     </span>
-                    <span class="result-count">Computer ones <span id="result-lose-count"> 0 </span> times</span>
+                    <span class="result-count">Computer won <span id="result-lose-count"> 0 </span> times</span>
                 </div>
                 <div class="row-container">
                     <div class="circle-container">
